Added Basic Structure & Media Queries

--- a/styles.css
+++ b/styles.css
@@ -142,7 +142,7 @@ table {
 
 
 /* MEDIA QUERIES (MEDIUM) */ 
-
+@media screen and (min-width: 800px) {
     #results {
         grid-template-columns: 1fr 1fr;
     }
@@ -156,6 +156,13 @@ table {
     .bar-chart {
         width: 50%;
     }
+}
+
+    
 
 
 /* MEDIA QUERIES (LARGE) */
+
+@media screen and (min-width: 1024px) {
+    
+}
